Rename subtheme default variables

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -1,4 +1,5 @@
 // Site variables.
 @import 'default-variables';
 
-// Site custom styles.
+// Subtheme local variables.
+@import 'local-variables';
