Use Bootstrap CDN by default

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -1,5 +1,5 @@
-// Site variables.
-@import 'default-variables';
+// UNB Lib theme + bootstrap assets.
+// @import '../../../../../vendor/unb-libraries/unb_lib_theme/assets/stylesheets/unblib';
 
 // Subtheme local variables.
 @import 'local-variables';
