--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -3,3 +3,19 @@
 
 // Subtheme local variables.
 @import 'local-variables';
+
+// Improve autocomplete.
+.ui-autocomplete li:first-child:before {
+  border-bottom: 1px solid $text-muted;
+  color: $text-muted;
+  content: 'Suggested matches';
+  display: block;
+  font-weight: bold;
+  margin-bottom: .5em;
+  padding: .5em 0;
+}
+.ui-autocomplete li,
+.ui-autocomplete li a {
+  display: block;
+}
+
