--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -62,3 +62,11 @@
   border-color: #c9e1bd #c9e1bd #c9e1bd transparent;
   box-shadow: -8px 0 0 #333;
 }
+
+.table > tbody > tr > td.field-multiple-drag {
+  vertical-align: middle;
+  width: 40px;
+}
+.tabledrag-handle {
+  float: none;
+}
