Override unb-lib.css rule: fix file upload widget

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -70,3 +70,8 @@
 .tabledrag-handle {
   float: none;
 }
+
+/* unb-lib.css override */
+input:not([type=button]):not([type=radio]):not([type=checkbox]):not([type=submit]):not([type=date]) {
+  line-height: normal;
+}
