Override unb-lib.css rule: remove hover border from drag icon

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -76,3 +76,6 @@
 input:not([type=button]):not([type=radio]):not([type=checkbox]):not([type=submit]):not([type=date]) {
   line-height: normal;
 }
+.tabledrag-handle:hover {
+  border: none;
+}
