Override bootstrap excessive bottom table margin

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -79,3 +79,6 @@ input:not([type=button]):not([type=radio]):not([type=checkbox]):not([type=submit
 .tabledrag-handle:hover {
   border: none;
 }
+.table {
+  margin-bottom: initial;
+}
