Undo unb-lib.css rules on Bootstrap body panel

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -82,3 +82,7 @@ input:not([type=button]):not([type=radio]):not([type=checkbox]):not([type=submit
 .table {
   margin-bottom: initial;
 }
+.panel-body {
+  border-top: none;
+  padding: 15px;
+}
