--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -88,15 +88,17 @@
 .chosen-container-single .chosen-single span {
   margin-right: 5em;
 }
-.panel-default > .panel-heading a:hover:before {
-  color: $widget-hover-color;
-}
 
 /* Search results */
-.search-result {
+.search-results .glyphicon {
+  font-size: smaller;
+  margin-right: .1em;
+  vertical-align: baseline;
+}
+.search-results .views-row {
   margin-bottom: 1.5em;
 }
-.search-result h3 {
+.search-results h3 {
   margin-bottom: 0;
 }
 .views-field-search-api-excerpt {
