Additional unb-lib.css overrides

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -130,3 +130,12 @@ input:not([type=button]):not([type=radio]):not([type=checkbox]):not([type=submit
 .panel-default > .panel-heading a {
   color: #333;
 }
+a:hover,
+a:active,
+a:focus {
+  border: none;
+  text-decoration: underline;
+}
+.panel-heading a {
+  font-weight: bold;
+}
