Fix inconsistent entity id, issue page lister WIP

--- a/custom/modules/digital_serial/modules/digital_serial_issue/templates/digital_serial_issue.html.twig
+++ b/custom/modules/digital_serial/modules/digital_serial_issue/templates/digital_serial_issue.html.twig
@@ -1,6 +1,6 @@
 {#
 /**
- * @file serial_issue.html.twig
+ * @file digital_serial_issue.html.twig
  * Default theme implementation to present Serial issue data.
  *
  * This template is used when viewing Serial issue pages.
@@ -15,7 +15,7 @@
  * @ingroup themeable
  */
 #}
-<div{{ attributes.addClass('serial_issue') }}>
+<div{{ attributes.addClass('digital_serial_issue') }}>
   {% if content %}
     {{- content -}}
   {% endif %}
