Update panel heading color

--- a/custom/themes/newspapers_lib_unb_ca/src/scss/_local-variables.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/_local-variables.scss
@@ -3,6 +3,6 @@ $link-color: #007fa3;
 $link-color-hover: #900;
 
 $text-muted: #777;
-$unb-lib-panel-heading: #fc0;
+$unb-lib-panel-heading: #333;
 
 $widget-hover-color: #31b0d5;
