--- a/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
+++ b/custom/themes/newspapers_lib_unb_ca/src/scss/style.scss
@@ -4,6 +4,21 @@
 // Subtheme local variables.
 @import 'local-variables';
 
+/* Element style tweaks */
+figure img {
+  border: 1px solid $text-muted;
+}
+figcaption {
+  margin-bottom: 1em;
+}
+a:hover,
+a:active,
+a:focus {
+  border-style: none;
+  text-decoration: underline;
+}
+
+/* Class/ID style tweaks */
 .tabledrag-handle:hover {
   border: none;
 }
@@ -21,12 +36,7 @@
 .panel-default > .panel-heading a {
   color: #333;
 }
-a:hover,
-a:active,
-a:focus {
-  border-style: none;
-  text-decoration: underline;
-}
+
 .panel-heading a {
   font-weight: bold;
 }
@@ -114,6 +124,7 @@ li.search-field:before {
   display: inline-block;
   padding: .5em 0;
 }
+
 /* Chosen overrides */
 select[multiple="multiple"] + .form-control {
   border: none;
@@ -127,6 +138,7 @@ select[multiple="multiple"] + .form-control {
   font-family: "Glyphicons Halflings";
   content: "\e003";
 }
+
 /* Fix overrides.min.css / unb-lib.css conflict */
 .select-wrapper select,
 input:not([type=button]):not([type=radio]):not([type=checkbox]):not([type=submit]):not([type=date]) {
@@ -184,6 +196,18 @@ a.btn-add::before {
 }
 .tabledrag-handle {
   float: none;
+}
+
+/* Helper classes */
+.no-gutters{
+  margin-left: 0;
+  margin-right: 0;
+}
+.no-gutters > section {
+  padding-left: 0;
+}
+.no-gutters > aside {
+  padding-right: 0;
 }
 
 /* Chosen + Bootstrap */
