--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -170,9 +170,9 @@
 
 </section>
 
-{% if content.field_description %}
+{% if content.field_sample_image|field_value %}
 <aside class="col-sm-4">
-    {% if content.field_sample_image %}
+    {% if content.field_sample_image|field_value %}
         <figure>
             {{ content.field_sample_image }}
             <figcaption>
