NBNP-18 Only display description if content, remove field label

--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -182,8 +182,8 @@
 
     {% endif %}
 
-    {% if content.field_description %}
-        {{ content.field_description }}
+    {% if content.field_description|field_value %}
+        {{ content.field_description|field_value }}
     {% endif %}
 
 </aside>
