--- a/custom/modules/newspapers_core/templates/node--publication.html.twig
+++ b/custom/modules/newspapers_core/templates/node--publication.html.twig
@@ -128,7 +128,8 @@
     {% if later_titles_up and later_titles_down %}
         <dl>
             <dt>{% trans %}Later title{% endtrans %}:</dt>
-            <dd>{% trans %}Merged with{%endtrans %} {{ later_titles_up }} {% trans %}to form{% endtrans %} {{ later_titles_down }}</dd>
+            <dd>{% trans %}Merged with{% endtrans %} {{ later_titles_up }}
+                {% trans %}to form{% endtrans %} {{ later_titles_down }}</dd>
         </dl>
     {% elseif later_titles_down %}
         {% set count = content.field_serial_relation_suc_ref_dn|field_value|length %}
@@ -138,6 +139,14 @@
             {% endif %}
             <dd>{{ content.field_serial_relationship_op_suc|field_value }}{{ later_titles_down }}</dd>
         </dl>
+    {% endif %}
+
+    {% if content.field_supplemental_information|field_value %}
+    <dl class="title-history">
+        <dt>{{ content.field_supplemental_information|field_label }}:</dt>
+        <dd class="no-borders">({% trans %}This field includes titles and publication dates of UNB Holdings only{%  endtrans %})<br >
+            {{ content.field_supplemental_information|field_value }}</dd>
+    </dl>
     {% endif %}
 
     {% if content.field_frequency|field_value %}
